# api/src/controller/sample/BestFitController.py
@@ -2,7 +2,7 @@ from FlaskManager import Controller, ControllerMethod
 from Role import *
 import BestFitDto, HttpStatus
 
-@Controller(url = '/best-fit')
+@Controller(url = '/best-fit', tag='BestFit', description='You can get the best Sample fit given a feature set')
 class BestFitController:
 
     @ControllerMethod(url='/<int:amount>', requestClass=[[BestFitDto.BestFitRequestDto]], roleRequired=[USER, ADMIN])
